# atlas

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.cursor/rules/: phased-build.mdc
src/: diagram.rs  highlight.rs  main.rs  paths.rs  progress.rs  store.rs  style.rs
src/commands/: architecture.rs  explain.rs  flow.rs  learn.rs  mod.rs  report.rs  top_files.rs
src/graph/: build.rs  db.rs  mod.rs  rank.rs
src/intelligence/: architecture.rs  explain.rs  flow.rs  learn.rs  mod.rs  snippets.rs
src/parse/: extract.rs  language.rs  mod.rs
src/scan/: mod.rs
tests/: VALIDATION.md
tests/benchmarks/: README.md  repos.json  run-reports.ps1
tests/fixtures/: README.md
tests/fixtures/c_sample/: core.c  util.c
tests/fixtures/c_sample/include/: util.h
tests/fixtures/demo_app/: README.md  main.py
tests/fixtures/demo_app/api/: middleware.py  router.py
tests/fixtures/demo_app/auth/: repository.py  routes.py  service.py  token.py
tests/fixtures/demo_app/config/: settings.py
tests/fixtures/demo_app/notifications/: email.py
tests/fixtures/demo_app/orders/: repository.py  routes.py  service.py
tests/fixtures/demo_app/payments/: gateway.py  service.py
tests/fixtures/demo_app/users/: models.py  repository.py  service.py
tests/fixtures/demo_app/utils/: logger.py
tests/fixtures/ugly_app/: README.md  main.py
tests/fixtures/ugly_app/api/: router.py
tests/fixtures/ugly_app/auth/: repository.py  routes.py  service.py  token.py
tests/fixtures/ugly_app/config/: settings.py
tests/fixtures/ugly_app/legacy/: auth_handler.py  auth_service.py
(+11 files in other folders)
