[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Repository intelligence for large codebases"
readme = "README.md"
license = "MIT"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
termcolor = "1.4"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
